[tool.poetry]
name = "CloudMage-GitUtils"
version = "0.0.5"
description = "Quickly and easily create usable Git repository objects from major Git platform providers automatically or by simply providing the repository URL."
authors = ["Rich Nason <rnason@cloudmage.io>"]
maintainers = ["Rich Nason <rnason@cloudmage.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
include = [
    "CHANGELOG.md",
    "LICENSE"
]
homepage = "https://github.com/TheCloudMage/PyPkgs-GitUtils"
repository = "https://github.com/TheCloudMage/PyPkgs-GitUtils"
documentation = "https://github.com/TheCloudMage/PyPkgs-GitUtils"
keywords = [
    "Packages",
    "CloudMage",
    "Git"
]

classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    {include = "cloudmage"}
]

[tool.poetry.urls]
"Releases" = "https://github.com/TheCloudMage/PyPkgs-GitUtils/releases"
"Issues" = "https://github.com/TheCloudMage/PyPkgs-GitUtils/issues"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.4.4"
coverage = "^5.0.3"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
